# MiniCCompiler

./: CMakeLists.txt  README.md
autolab/: README.md
autolab/Lab/eeyore/: autograde-Makefile  eeyore.rb  eeyore.yml
autolab/Lab/eeyore/src/: Makefile-handout  driver.sh
autolab/Lab/eeyore/test-autograder/: handin.tar  make.exe.stackdump
autolab/Lab/riscv/: autograde-Makefile  riscv.rb  riscv.yml
autolab/Lab/riscv/src/: driver.sh  lib.c
autolab/Lab/tigger/: autograde-Makefile  tigger.rb  tigger.yml
doc/: Eeyore.tex  Eeyore.txt  Linear Scan 相关说明.md  MiniC.tex  Minic.tex  TAC.tex  Tigger SPECIFICATION.txt  Tigger.tex  midterm.pptx  opening.pptx  pre.tex  report.tex  report_Eeyore.tex  report_MiniC.tex  report_Tigger.tex  syntax.txt  three-address-code-debug.txt  three-address-code.txt
src/: CMakeLists.txt  MiniC.l  MiniC.y  expression.cpp  expression.h  gen.cpp  gen.h  main.cpp  symbol.c  symbol.cpp  symbol.h  type_to_type.cpp  type_to_type_arr.txt  yaccType.cpp  yaccType.h  yaccTypes.c  yaccTypes.h  yaccUtils.cpp  yaccUtils.h
src/Eeyore_simulator/: CMakeLists.txt  Eeyore.cpp  Eeyore.l  Eeyore.y  Eeyore_debug.cpp  Eeyore_execute.cpp  typedef.h
src/Register_allocate/: CMakeLists.txt  Eeyore.cpp  Eeyore.l  Eeyore.tab.cpp  Eeyore.tab.hpp  Eeyore.y  Eeyore.yy.cpp  allocate.cpp  allocate.h  analysis.cpp  analysis.h  need_to_be_done.txt  typedef.cpp  typedef.h  util.cpp  util.h
src/judge/: CMakeLists.txt  judge_one.py
src/parser/: CMakeLists.txt  MiniC.y  MiniC.yy.cpp  expression.cpp  gen.cpp  gen.h  main.cpp  symbol.cpp  symbol.h  yaccType.h  yaccUtils.cpp  yaccUtils.h
src/register_allocation/: CMakeLists.txt  reg.cpp  reg.h  regalloc.l  regalloc.y
src/riscv_assembly/: CMakeLists.txt  riscv.l  riscv.y  test.c  test.s  yaccTypes.h
src/three-address-code-simulator/: CMakeLists.txt  op.cpp  op.h  sim.cpp  sim.h
src/three-address-code-simulator-deprecated/: sim.h  test.in
src/tigger_simulator/: CMakeLists.txt  dbg.cpp  run.cpp  tigger.cpp  tigger.h  tigger.l  tigger.y  yaccTypes.cpp  yaccTypes.h
test/MiniC/: aarg.c  arr.c  cmt.c  expr.c  func.c  funny.c  id.c  if.c  qsort.c  scope.c  sort.c  str.c  wseq.c
(+1051 files in other folders)
