include_directories(${CMAKE_CURRENT_BINARY_DIR})
find_package(FLEX REQUIRED)
find_package(BISON REQUIRED)
BISON_TARGET(riscvParser riscv.y ${CMAKE_CURRENT_BINARY_DIR}/riscv.tab.cpp)
FLEX_TARGET(riscvLexer riscv.l ${CMAKE_CURRENT_BINARY_DIR}/riscv.yy.cpp)
ADD_FLEX_BISON_DEPENDENCY(riscvLexer riscvParser)
add_compile_options(-m32)
set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} -m32)
ADD_EXECUTABLE(riscv ${BISON_riscvParser_OUTPUT_SOURCE} ${FLEX_riscvLexer_OUTPUTS})
